--- a/style.css
+++ b/style.css
@@ -259,7 +259,52 @@ color: white;
     text-align: center;
 } 
 
+
+/* Contact us page */
+
+.background-page {
+    background-image: url(./img/headphone1.png);
+    background-position: center;
+    background-size: cover;
+    background-color: #777;
+    margin-top: -30px;
+    margin-bottom: -30px;
+}
+.contact-container {
+
+    background-color: rgba(255, 255, 255,0.496);
+    padding: 30px;
+    max-width: 600px;
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0px 4px rgba(0, 0,0,0.1);
+    margin-left: 450px;
+    margin-top: 50px;
+    margin-bottom: 30px;
+}
+
+h2{
+    text-align: center;
+    color: #333;
+    margin-bottom: 15px;
+}
+
+.form-group{
+    margin-bottom: 15px;
+}
+
+label{
+    display: block;
+    margin-bottom: 5px;
+    color: #333;
+}
+input[ty]
+
+
+
 /* footer section */
+
+
 
 .footer {
     width: 100%;
@@ -268,19 +313,68 @@ color: white;
     display: flex;
     align-items: center;
     justify-content: space-around;
-}
-
-.footer h4 {
+  }
+  .footer h4 {
     margin-bottom: 15px;
-
-}
-
-.icn {
-background-color: white;
-border-radius: 100px;
-
-}
-
-.footer2 p a{
+  }
+  .icn {
+    background-color: white;
+    border-radius: 100px;
+  }
+  .footer2 p a{
     color: rgb(253, 253, 253);
+  }
+
+/* about us page */
+
+.about-us-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 20px;
+    background-color: #fff;
+
 }
+
+.about-us-container {
+    max-width : 1250px;
+    padding: 30px;
+    background-color: #fffff;
+}
+
+
+
+
+  /* signup and login page */
+  
+  .form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    padding: 20px;
+
+  }
+
+  .form-box {
+    background-color: #ffffffa9;
+    padding: 50px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0,0, 0, 0.1);
+    margin: 0 15px;
+    width: 450px;
+
+  }
+
+  .form-box h2 {
+margin-bottom: 20px;
+font-size: 2rem;
+
+  }
+  .form-group {
+    margin-bottom: 15px;
+  }
+  .form-group label {
+    display: block;
+    margin-bottom: 5px;
+  }
